# webgate

./: .gitignore  Dockerfile  README.md  build.sh  control.sh
modules/: attach.sh  build.sh  install.sh  postinstall.sh  setup.sh  sync.sh
modules/commandline/: install.sh
modules/depot_tools/: args.gn  build.sh  chromium.patch  commit.txt  config.json  install.sh  setup.sh
modules/initializer/: config.json  install.sh
modules/libdrm/: build.sh  config.json  setup.sh
modules/libglvnd/: config.json  install.sh  setup.sh
modules/linux/: .config  build.sh  config.json  install.sh
modules/linux-firmware/: config.json  install.sh
modules/manual/: dependencies  dependencies.sh  directories.sh  fonts.sh  postinstall.sh  programs.sh
modules/mesa/: config.json  setup.sh
scripts/: bootloader.sh  docker.sh  filesystem.sh  image.sh  install-to-device.sh  install-to-usb.sh  postinstall.sh
