use_ozone = true
target_os = "chromeos"
ozone_auto_platforms = false
ozone_platform = "drm"
ozone_platform_drm = true

# Use system GBM/drm (Mesa), not minigbm
use_system_minigbm = true
use_system_libdrm = true

# Audio
rtc_use_pipewire = false
use_alsa = true
use_pulseaudio = false

use_xkbcommon = false
use_glib = false
use_gtk = false
use_bluez = true
use_cups = false
use_dbus = true
use_gio = false
use_kerberos = false
use_libpci = false
use_udev = true
v8_enable_lazy_source_positions = false
use_pangocairo = false
target_sysroot = ""
use_sysroot = false

use_system_bluez = true

is_debug = false
is_component_build=false
enable_precompiled_headers=false
is_official_build = false

# Proprietary codecs (e.g. mp4)
proprietary_codecs = true
ffmpeg_branding = "Chrome"
